--- a/languages/ru_RU.po
+++ b/languages/ru_RU.po
@@ -1,20 +1,20 @@
 # Copyright (C) 2017 Automattic
 # This file is distributed under the GNU General Public License v2 or later.
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: _s 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/tags/_s\n"
-"POT-Creation-Date: 2018-06-10 13:30+0000\n"
+"POT-Creation-Date: 2018-06-10 13:05+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: \n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2018-06-10 13:06+0000\n"
+"Last-Translator: admin <deamonsda@gmail.com>\n"
+"Language-Team: Русский\n"
 "X-Generator: Loco https://localise.biz/\n"
-"Language: \n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;"
+"Language: ru_RU\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10 >= 2 && "
+"n%10<=4 &&(n%100<10||n%100 >= 20)? 1 : 2);"
 
 #: 404.php:17
 msgid "Oops! That page can&rsquo;t be found."
@@ -86,7 +86,7 @@ msgstr ""
 #. translators: 1: list of categories.
 #: inc/template-tags.php:55
 msgid "Posted in %1$s"
-msgstr ""
+msgstr "Опубликовано в %1$s"
 
 #. translators: 1: list of tags.
 #: inc/template-tags.php:62
@@ -139,6 +139,14 @@ msgstr ""
 msgid "Continue reading<span class=\"screen-reader-text\"> \"%s\"</span>"
 msgstr ""
 
+#. Theme Name of the plugin/theme
+msgid "_s"
+msgstr ""
+
+#. Theme URI of the plugin/theme
+msgid "https://underscores.me/"
+msgstr ""
+
 #. Description of the plugin/theme
 msgid ""
 "Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if "
@@ -162,6 +170,7 @@ msgid "%1$s thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
 
 #. translators: %s: post date.
 #: inc/template-tags.php:29
@@ -182,33 +191,4 @@ msgid ", "
 msgstr ""
 
 msgid "Comment:&nbsp;"
-msgstr ""
-
-msgid "Name"
-msgstr ""
-
-msgid "Email"
-msgstr ""
-
-msgid "Website"
-msgstr ""
-
-msgid "We\\'ll never share your email with anyone else."
-msgstr ""
-
-msgid "This name will be displayed in the comment"
-msgstr ""
-
-msgid "Link to your website"
-msgstr ""
-
-# Pagination Prev
-msgid "&laquo;"
-msgstr ""
-
-# Pagination Next
-msgid "&raquo;"
-msgstr ""
-
-msgid "Posts navigation"
-msgstr ""
+msgstr "Комментарий:&nbsp;"
